start view for user, admin and upload file

--- a/share/web/static/css/app-base.css
+++ b/share/web/static/css/app-base.css
@@ -3,3 +3,18 @@ body {
      background: white;
 }
 
+.fildesc {
+  margin:10px;
+  border-collapse: collapse;
+  border-bottom:hidden;
+}
+
+.filedesc th {
+    font-weight: bold;
+    text-align: center;
+    background-color: #ddd;
+}
+
+.filedesc td {
+    text-align: right;
+}
