add yellow render and more colors to palette
git-svn-id: https://svn.univ-metz.fr/pub/utils/trunk/ViewSpreadsheets@84 bdc3685e-f11c-0410-b45c-c961040e75df

--- a/share/web/static/css/app-base.css
+++ b/share/web/static/css/app-base.css
@@ -66,6 +66,10 @@ body {
     background-color: #98FB98;
 }
 
+.highlight-yellow {
+    background-color: #F7F928;
+}
+
 .info-admin {
        background-color: #ccdddd;
 }
