design add aroows for download
git-svn-id: https://svn.univ-metz.fr/pub/utils/trunk/ViewSpreadsheets@94 bdc3685e-f11c-0410-b45c-c961040e75df

--- a/share/web/static/css/app-base.css
+++ b/share/web/static/css/app-base.css
@@ -50,6 +50,10 @@ body {
     vertical-align:text-bottom;
 }
 
+.download img {
+    vertical-align:middle;
+}
+
 .l1 {
     background-color: #f1f6ff;
 }
